force-app/main/default/objects/ComplaintReport__c/ComplaintReport__c.object-meta.xml
<CustomObject>
    <label>クレーム報告書</label>
    <nameField>
        <label>クレーム報告書名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>