force-app/main/default/objects/ComplaintReport__c/fields/AccountAction__c.field-meta.xml
<CustomField>
    <fullName>AccountAction__c</fullName>
    <label>クレームに対する仕入先の対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>良かった</fullName>
            </value>
            <value>
                <fullName>普通</fullName>
            </value>
            <value>
                <fullName>悪かった</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>