force-app/main/default/objects/ComplaintReport__c/fields/AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerID__c</fullName>
    <formula>Account__r.CW_OwnerId__r.Id</formula>
    <label>/得意先所有者ID</label>
    <type>Text</type>
</CustomField>