force-app/main/default/objects/ComplaintReport__c/fields/AccrualDate__c.field-meta.xml
<CustomField>
    <fullName>AccrualDate__c</fullName>
    <label>発生日</label>
    <type>Date</type>
</CustomField>