force-app/main/default/objects/ComplaintReport__c/fields/apologize__c.field-meta.xml
<CustomField>
    <fullName>apologize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>謝りで済ます</label>
    <type>Checkbox</type>
</CustomField>