force-app/main/default/objects/ComplaintReport__c/fields/CauseOfComplaint__c.field-meta.xml
<CustomField>
    <fullName>CauseOfComplaint__c</fullName>
    <label>クレーム原因</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>手配もれ</fullName>
            </value>
            <value>
                <fullName>記入ミス</fullName>
            </value>
            <value>
                <fullName>連絡ミス</fullName>
            </value>
            <value>
                <fullName>支払い</fullName>
            </value>
            <value>
                <fullName>照合</fullName>
            </value>
            <value>
                <fullName>金額間違い</fullName>
            </value>
            <value>
                <fullName>相殺関連</fullName>
            </value>
            <value>
                <fullName>支払い手段間違い</fullName>
            </value>
            <value>
                <fullName>支払漏れ</fullName>
            </value>
            <value>
                <fullName>支払い先間違い</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>