force-app/main/default/objects/ComplaintReport__c/fields/CheckAccount__c.field-meta.xml
<CustomField>
    <fullName>CheckAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>負担先_得意先</label>
    <type>Checkbox</type>
</CustomField>