force-app/main/default/objects/ComplaintReport__c/fields/CheckOriginSupplier__c.field-meta.xml
<CustomField>
    <fullName>CheckOriginSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>負担先_仕入先</label>
    <type>Checkbox</type>
</CustomField>