force-app/main/default/objects/ComplaintReport__c/fields/CheckOurCompany__c.field-meta.xml
<CustomField>
    <fullName>CheckOurCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>負担先_当社</label>
    <type>Checkbox</type>
</CustomField>