force-app/main/default/objects/ComplaintReport__c/fields/commentsComplaints__c.field-meta.xml
<CustomField>
    <fullName>commentsComplaints__c</fullName>
    <label>クレームに対する得意先のコメント</label>
    <type>TextArea</type>
</CustomField>