force-app/main/default/objects/ComplaintReport__c/fields/CommunicationError__c.field-meta.xml
<CustomField>
    <fullName>CommunicationError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡ミス</label>
    <type>Checkbox</type>
</CustomField>