force-app/main/default/objects/ComplaintReport__c/fields/ComplaintStatus__c.field-meta.xml
<CustomField>
    <fullName>ComplaintStatus__c</fullName>
    <label>クレーム状況</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>納期遅れ</fullName>
            </value>
            <value>
                <fullName>品名違い</fullName>
            </value>
            <value>
                <fullName>数量違い</fullName>
            </value>
            <value>
                <fullName>未納</fullName>
            </value>
            <value>
                <fullName>規格違い</fullName>
            </value>
            <value>
                <fullName>不良品</fullName>
            </value>
            <value>
                <fullName>破損</fullName>
            </value>
            <value>
                <fullName>紛失</fullName>
            </value>
            <value>
                <fullName>誤配</fullName>
            </value>
            <value>
                <fullName>照合間違い</fullName>
            </value>
            <value>
                <fullName>出荷確認間違い</fullName>
            </value>
            <value>
                <fullName>逆オーダー関連</fullName>
            </value>
            <value>
                <fullName>計上間違い</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>