force-app/main/default/objects/ComplaintReport__c/fields/ConfirmationRequest__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationRequest__c</fullName>
    <label>確認依頼</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>確認依頼前</fullName>
                <default>true</default>
                <label>確認依頼前</label>
            </value>
            <value>
                <fullName>確認依頼を通知</fullName>
            </value>
            <value>
                <fullName>確認依頼通知済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>