force-app/main/default/objects/ComplaintReport__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当者名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>クレーム報告書</relationshipLabel>
    <relationshipName>ClaimContact</relationshipName>
    <type>Lookup</type>
</CustomField>