force-app/main/default/objects/ComplaintReport__c/fields/Corruption__c.field-meta.xml
<CustomField>
    <fullName>Corruption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>破損</label>
    <type>Checkbox</type>
</CustomField>