force-app/main/default/objects/ComplaintReport__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <label>作成者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>若松桃圭</fullName>
            </value>
            <value>
                <fullName>髙時一美</fullName>
            </value>
            <value>
                <fullName>西彩香</fullName>
            </value>
            <value>
                <fullName>座間萌</fullName>
            </value>
            <value>
                <fullName>荒木由貴</fullName>
            </value>
            <value>
                <fullName>森田裕子</fullName>
            </value>
            <value>
                <fullName>相澤杏佳</fullName>
            </value>
            <value>
                <fullName>會本明子</fullName>
            </value>
            <value>
                <fullName>飯尾和大</fullName>
            </value>
            <value>
                <fullName>駒崎美保</fullName>
            </value>
            <value>
                <fullName>山村良亜</fullName>
            </value>
            <value>
                <fullName>北野惠介</fullName>
            </value>
            <value>
                <fullName>北原佑樹</fullName>
            </value>
            <value>
                <fullName>宮野隼</fullName>
            </value>
            <value>
                <fullName>児玉賢司</fullName>
            </value>
            <value>
                <fullName>永樂秀樹</fullName>
            </value>
            <value>
                <fullName>山下大樹</fullName>
            </value>
            <value>
                <fullName>落合秀幸</fullName>
            </value>
            <value>
                <fullName>野呂佑樹</fullName>
            </value>
            <value>
                <fullName>鈴木康功</fullName>
            </value>
            <value>
                <fullName>青木啓也</fullName>
            </value>
            <value>
                <fullName>伊藤大悟</fullName>
            </value>
            <value>
                <fullName>齋藤大樹</fullName>
            </value>
            <value>
                <fullName>石田裕和</fullName>
            </value>
            <value>
                <fullName>鈴木一茂</fullName>
            </value>
            <value>
                <fullName>後藤孝二</fullName>
            </value>
            <value>
                <fullName>永井伸治</fullName>
            </value>
            <value>
                <fullName>田中奈々絵</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>