force-app/main/default/objects/ComplaintReport__c/fields/CW_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>CW_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先所有者_cw</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CW_OwnerIdUser</relationshipName>
    <type>Lookup</type>
</CustomField>