force-app/main/default/objects/ComplaintReport__c/fields/defectiveProduct__c.field-meta.xml
<CustomField>
    <fullName>defectiveProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>不良品</label>
    <type>Checkbox</type>
</CustomField>