force-app/main/default/objects/ComplaintReport__c/fields/deliveryDelay__c.field-meta.xml
<CustomField>
    <fullName>deliveryDelay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>納期遅れ</label>
    <type>Checkbox</type>
</CustomField>