force-app/main/default/objects/ComplaintReport__c/fields/DepartmentManagerComment__c.field-meta.xml
<CustomField>
    <fullName>DepartmentManagerComment__c</fullName>
    <label>部署長コメント</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>