force-app/main/default/objects/ComplaintReport__c/fields/detail__c.field-meta.xml
<CustomField>
    <fullName>detail__c</fullName>
    <label>詳細</label>
    <type>TextArea</type>
</CustomField>