force-app/main/default/objects/ComplaintReport__c/fields/DifferentStandards__c.field-meta.xml
<CustomField>
    <fullName>DifferentStandards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>規格違い</label>
    <type>Checkbox</type>
</CustomField>