force-app/main/default/objects/ComplaintReport__c/fields/DiscountProcessing__c.field-meta.xml
<CustomField>
    <fullName>DiscountProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>値引き処理</label>
    <type>Checkbox</type>
</CustomField>