force-app/main/default/objects/ComplaintReport__c/fields/entryError__c.field-meta.xml
<CustomField>
    <fullName>entryError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>記入ミス</label>
    <type>Checkbox</type>
</CustomField>