force-app/main/default/objects/ComplaintReport__c/fields/ExpensesBorneBy__c.field-meta.xml
<CustomField>
    <fullName>ExpensesBorneBy__c</fullName>
    <label>費用負担先</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>当社</fullName>
            </value>
            <value>
                <fullName>得意先</fullName>
            </value>
            <value>
                <fullName>仕入先</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>