force-app/main/default/objects/ComplaintReport__c/fields/FreightBurden__c.field-meta.xml
<CustomField>
    <fullName>FreightBurden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>運賃負担</label>
    <type>Checkbox</type>
</CustomField>