force-app/main/default/objects/ComplaintReport__c/fields/kinyusya__c.field-meta.xml
<CustomField>
    <fullName>kinyusya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>記入者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>kinyusya</relationshipName>
    <type>Lookup</type>
</CustomField>