force-app/main/default/objects/ComplaintReport__c/fields/lost__c.field-meta.xml
<CustomField>
    <fullName>lost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>紛失</label>
    <type>Checkbox</type>
</CustomField>