force-app/main/default/objects/ComplaintReport__c/fields/Misdirection__c.field-meta.xml
<CustomField>
    <fullName>Misdirection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>誤配</label>
    <type>Checkbox</type>
</CustomField>