force-app/main/default/objects/ComplaintReport__c/fields/MissedArrangements__c.field-meta.xml
<CustomField>
    <fullName>MissedArrangements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手配もれ</label>
    <type>Checkbox</type>
</CustomField>