force-app/main/default/objects/ComplaintReport__c/fields/missedPayment__c.field-meta.xml
<CustomField>
    <fullName>missedPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>支払漏れ</label>
    <type>Checkbox</type>
</CustomField>