force-app/main/default/objects/ComplaintReport__c/fields/MistakeAccounting__c.field-meta.xml
<CustomField>
    <fullName>MistakeAccounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>計上間違い</label>
    <type>Checkbox</type>
</CustomField>