force-app/main/default/objects/ComplaintReport__c/fields/nonPayment__c.field-meta.xml
<CustomField>
    <fullName>nonPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>未納</label>
    <type>Checkbox</type>
</CustomField>