force-app/main/default/objects/ComplaintReport__c/fields/OffsettingRelated__c.field-meta.xml
<CustomField>
    <fullName>OffsettingRelated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>相殺関連</label>
    <type>Checkbox</type>
</CustomField>