force-app/main/default/objects/ComplaintReport__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談名</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>クレーム報告書</relationshipLabel>
    <relationshipName>ClaimOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>