force-app/main/default/objects/ComplaintReport__c/fields/originAccount__c.field-meta.xml
<CustomField>
    <fullName>originAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>得意先</label>
    <type>Checkbox</type>
</CustomField>