force-app/main/default/objects/ComplaintReport__c/fields/OriginOfComplaint__c.field-meta.xml
<CustomField>
    <fullName>OriginOfComplaint__c</fullName>
    <label>クレーム発生元</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>当社</fullName>
            </value>
            <value>
                <fullName>得意先</fullName>
            </value>
            <value>
                <fullName>関連仕入先</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>