force-app/main/default/objects/ComplaintReport__c/fields/otherAction__c.field-meta.xml
<CustomField>
    <fullName>otherAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他_対応と処置結果</label>
    <type>Checkbox</type>
</CustomField>