force-app/main/default/objects/ComplaintReport__c/fields/OtherCause__c.field-meta.xml
<CustomField>
    <fullName>OtherCause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他_クレーム原因</label>
    <type>Checkbox</type>
</CustomField>