force-app/main/default/objects/ComplaintReport__c/fields/OtherOriginAccount__c.field-meta.xml
<CustomField>
    <fullName>OtherOriginAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他_クレーム発生元</label>
    <type>Checkbox</type>
</CustomField>