force-app/main/default/objects/ComplaintReport__c/fields/OtherStatus__c.field-meta.xml
<CustomField>
    <fullName>OtherStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他_クレーム状況</label>
    <type>Checkbox</type>
</CustomField>