force-app/main/default/objects/ComplaintReport__c/fields/OurCompany__c.field-meta.xml
<CustomField>
    <fullName>OurCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>当社</label>
    <type>Checkbox</type>
</CustomField>