force-app/main/default/objects/ComplaintReport__c/fields/payment__c.field-meta.xml
<CustomField>
    <fullName>payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>支払い</label>
    <type>Checkbox</type>
</CustomField>