force-app/main/default/objects/ComplaintReport__c/fields/PersonalComment__c.field-meta.xml
<CustomField>
    <fullName>PersonalComment__c</fullName>
    <label>本人コメント</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>