force-app/main/default/objects/ComplaintReport__c/fields/phase__c.field-meta.xml
<CustomField>
    <fullName>phase__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入力中</fullName>
                <default>true</default>
                <label>入力中</label>
            </value>
            <value>
                <fullName>営業担当者確認中</fullName>
            </value>
            <value>
                <fullName>承認中</fullName>
            </value>
            <value>
                <fullName>承認済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>