force-app/main/default/objects/ComplaintReport__c/fields/PrimeContractor__c.field-meta.xml
<CustomField>
    <fullName>PrimeContractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元請名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>クレーム報告書 (元請名)</relationshipLabel>
    <relationshipName>PrimeContractorAccount</relationshipName>
    <type>Lookup</type>
</CustomField>