force-app/main/default/objects/ComplaintReport__c/fields/processingDate__c.field-meta.xml
<CustomField>
    <fullName>processingDate__c</fullName>
    <label>処理日</label>
    <type>Date</type>
</CustomField>