force-app/main/default/objects/ComplaintReport__c/fields/ProcessingTime__c.field-meta.xml
<CustomField>
    <fullName>ProcessingTime__c</fullName>
    <label>クレーム対応にかかった時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1・10分以内</fullName>
            </value>
            <value>
                <fullName>2・30分以内</fullName>
            </value>
            <value>
                <fullName>3・30分以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>