force-app/main/default/objects/ComplaintReport__c/fields/ProductInspection__c.field-meta.xml
<CustomField>
    <fullName>ProductInspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>製品検査</label>
    <type>Checkbox</type>
</CustomField>