force-app/main/default/objects/ComplaintReport__c/fields/ProductReplacement__c.field-meta.xml
<CustomField>
    <fullName>ProductReplacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>商品入れ替え</label>
    <type>Checkbox</type>
</CustomField>