force-app/main/default/objects/ComplaintReport__c/fields/rearrangement__c.field-meta.xml
<CustomField>
    <fullName>rearrangement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再手配</label>
    <type>Checkbox</type>
</CustomField>