force-app/main/default/objects/ComplaintReport__c/fields/ResponseResults__c.field-meta.xml
<CustomField>
    <fullName>ResponseResults__c</fullName>
    <label>対応結果</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>謝りで済ます</fullName>
            </value>
            <value>
                <fullName>商品入れ替え</fullName>
            </value>
            <value>
                <fullName>製品検査</fullName>
            </value>
            <value>
                <fullName>返品</fullName>
            </value>
            <value>
                <fullName>再手配</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>