force-app/main/default/objects/ComplaintReport__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>返品</label>
    <type>Checkbox</type>
</CustomField>