force-app/main/default/objects/ComplaintReport__c/fields/SalespersonView__c.field-meta.xml
<CustomField>
    <fullName>SalespersonView__c</fullName>
    <label>営業担当者の見解</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>