force-app/main/default/objects/ComplaintReport__c/fields/ShippingConfirmationError__c.field-meta.xml
<CustomField>
    <fullName>ShippingConfirmationError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出荷確認間違い</label>
    <type>Checkbox</type>
</CustomField>