force-app/main/default/objects/ComplaintReport__c/fields/SiteName__c.field-meta.xml
<CustomField>
    <fullName>SiteName__c</fullName>
    <label>現場名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>