force-app/main/default/objects/ComplaintReport__c/fields/SpecificContent__c.field-meta.xml
<CustomField>
    <fullName>SpecificContent__c</fullName>
    <label>具体的内容</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>