force-app/main/default/objects/ComplaintReport__c/fields/supplement__c.field-meta.xml
<CustomField>
    <fullName>supplement__c</fullName>
    <label>補足事項</label>
    <length>225</length>
    <type>Text</type>
</CustomField>