force-app/main/default/objects/ComplaintReport__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>照合</label>
    <type>Checkbox</type>
</CustomField>