force-app/main/default/objects/ComplaintReport__c/fields/WrongAmount__c.field-meta.xml
<CustomField>
    <fullName>WrongAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>金額間違い</label>
    <type>Checkbox</type>
</CustomField>