force-app/main/default/objects/ComplaintReport__c/fields/WrongPaymentAddress__c.field-meta.xml
<CustomField>
    <fullName>WrongPaymentAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>支払い先間違い</label>
    <type>Checkbox</type>
</CustomField>