force-app/main/default/objects/ComplaintReport__c/fields/WrongProductName__c.field-meta.xml
<CustomField>
    <fullName>WrongProductName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>品名違い</label>
    <type>Checkbox</type>
</CustomField>