force-app/main/default/objects/ComplaintReport__c/fields/WrongQuantity__c.field-meta.xml
<CustomField>
    <fullName>WrongQuantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>数量違い</label>
    <type>Checkbox</type>
</CustomField>